--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,6 @@ outputs_iter_vae/
 outputs_iter_mult/
 outputs_iter_mult_prompt/
 outputs_iter_mult_prompt_vae/
+outputs_iter_mult_prompt_new/
+outputs_iter_mult_prompt_new_vae/
 .env
